Improved the HTML of the site

--- a/index.html
+++ b/index.html
@@ -13,44 +13,45 @@
     <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
     <meta property="og:url" content="https://www.aaronhurtado.com/">
 
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)" />
+
     <title>Aaron Hurtado's Website</title>
 
-    <link rel="icon" type="image/png" href="./images/favicon1.png" loading="eager">
-    <link rel="stylesheet" href="./style.css" loading="eager">
-    <script src="./script.js" loading="eager"></script>
+    <link rel="icon" type="image/png" href="./images/favicon1.png">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header>
         <nav class="topbar">
             <ul class="nav-links left">
-                <a href="#">
-                    <li>
-                        <img src="./images/house1.png" alt="Home" class="nav-icon" loading="eager"/>
+                <li>
+                    <a href="#">
+                        <img src="./images/house1.png" alt="Home" class="nav-icon" loading="eager">
                         Home
-                    </li>
-                </a>
-                <a href="https://github.com/aahurtado/my_website" target="_blank">
-                    <li>
-                        <img src="./images/github.png" alt="GitHub" class="nav-icon" loading="eager"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/aahurtado/my_website" target="_blank">
+                        <img src="./images/github.png" alt="GitHub" class="nav-icon" loading="eager">
                         GitHub
-                    </li>
-                </a>
+                    </a>
+                </li>
             </ul> 
 
             <ul class="nav-links right">
-                <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">
-                    <li>
-                        <img src="./images/cv.png" alt="Resume" class="nav-icon" loading="eager"/>
+                <li>
+                    <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">
+                        <img src="./images/cv.png" alt="Resume" class="nav-icon" loading="eager">
                         Resume
-                    </li>
-                </a>
-                <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">
-                    <li>
-                        <img src="./images/linkedin.png" alt="LinkedIn" class="nav-icon" loading="eager"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">
+                        <img src="./images/linkedin.png" alt="LinkedIn" class="nav-icon" loading="eager">
                         Linkedin
-                    </li>
-                </a>
+                    </a>
+                </li>
             </ul> 
             <div class="progress-container">
                 <div class="progress-bar" id="progressBar"></div>
@@ -62,16 +63,16 @@
     <nav class="sidebar">
         <h6>Sections</h6>
         <ul>
-            <li><a href="#about_me" class="scroll-link">About Me</a></li>
-            <li><a href="#education" class="scroll-link">Education</a></li>
-            <li><a href="#experience" class="scroll-link">Experience</a></li>
-            <li><a href="#projects" class="scroll-link">Projects</a></li>
-            <li><a href="#footer" class="scroll-link">Contact</a></li>
+            <li><a href="#about_me">About Me</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#footer">Contact</a></li>
         </ul>
     </nav>
 
 
-    <main role="main">
+    <main>
         <section class="about_me" id="about_me">
             <div class="container">
                 <h1>Welcome</h1>
@@ -135,7 +136,7 @@
 
 
                 <div class="image-container">
-                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image"/>
+                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image">
                 </div>
             </div>
         </section>
@@ -148,9 +149,9 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_seal.png" alt="UCSD Seal" />
+                        <img src="./images/ucsd_seal.png" alt="UCSD Seal">
                     </a>
-                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image"/>
+                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -182,7 +183,7 @@
 
                 <div class="image-container">
                     <a href="https://cse.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department" />
+                        <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department">
                     </a>
                 </div>
             </div>
@@ -289,11 +290,11 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" />
+                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" />
+                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo">
                     </a>
                 </div>
 
@@ -339,22 +340,22 @@
 
                 <div class="image-container">
                     <a href="https://www.epsilonsystems.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" />
+                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo">
                     </a>
                     <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" />
+                        <img src="./images/raytheon.jfif" alt="Raytheon Logo">
                     </a>
                 </div>
 
                 <div class="image-container">
                     <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/navy_ship.jpg" alt="Navy Ship" />
+                        <img src="./images/navy_ship.jpg" alt="Navy Ship">
                     </a>
                 </div>
 
                 <div class="video-container">
                     <!-- <iframe src="https://www.youtube.com/embed/XrNSXqaZtC0?autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0"></iframe> -->
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XrNSXqaZtC0?si=HSENmCpgKOFFwTUh&autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XrNSXqaZtC0?si=HSENmCpgKOFFwTUh&autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -378,7 +379,7 @@
                 </p>
 
                 <div class="image-container">
-                    <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image"/>
+                    <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image">
                 </div>
 
                 <h5>What is <a href="https://www.investopedia.com/terms/t/technicalanalysis.asp" target="_blank" rel="noopener noreferrer">Technical Analysis?</a></h5>
@@ -398,7 +399,7 @@
 
                 <div class="image-container">
                     <a href="https://www.investopedia.com/terms/m/macd.asp" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/macd.webp" alt="MACD"/>
+                        <img src="./images/macd.webp" alt="MACD">
                     </a>
                 </div>
                 
@@ -409,7 +410,7 @@
                 </p>
 
                 <div class="image-container">
-                    <img src="./images/crypto.jpg" alt="Cryptocurrency" onclick="openFullscreen(this)" class="clickable-image"/>
+                    <img src="./images/crypto.jpg" alt="Cryptocurrency" onclick="openFullscreen(this)" class="clickable-image">
                 </div>
 
                 <h5>Freqtrade</h5>
@@ -419,7 +420,7 @@
 
                 <div class="image-container">
                     <a href="https://github.com/freqtrade/freqtrade" target="_blank">
-                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" />
+                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo">
                     </a>
                 </div> 
 
@@ -429,7 +430,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/code_freqtrade_strategy.png" alt="Example Freqtrade Strategy" onclick="openFullscreen(this)" class="clickable-image"/>
+                        <img src="./images/code_freqtrade_strategy.png" alt="Example Freqtrade Strategy" onclick="openFullscreen(this)" class="clickable-image">
                         <figcaption>A Minimal Freqtrade Strategy</figcaption>
                     </figure>
                 </div> 
@@ -501,7 +502,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image" />
+                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image">
                         <figcaption>My Freqtrade Results</figcaption>
                     </figure>
                 </div>
@@ -561,7 +562,7 @@
 
 
                 <div class="image-container">
-                    <img src="./images/bitcoin.webp" alt="Bitcoin Logo" onclick="openFullscreen(this)" class="clickable-image"/>
+                    <img src="./images/bitcoin.webp" alt="Bitcoin Logo" onclick="openFullscreen(this)" class="clickable-image">
                 </div>
 
 
@@ -588,7 +589,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image"/>
+                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image">
                         <figcaption>PS5 listings on eBay by scalpers</figcaption>
                     </figure>
                 </div>
@@ -609,7 +610,7 @@
                 <div class="image-container">
                     <figure>
                         <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
-                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot" />
+                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot">
                         </a>
                         <figcaption>Phoenix Bot UI</figcaption>
                     </figure>
@@ -648,7 +649,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image"/>
+                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image">
                         <figcaption>PS5 Product Page</figcaption>
                     </figure>
                 </div>
@@ -698,7 +699,7 @@
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
-                        <img src="./images/ps5.png" alt="Playstation 5" />
+                        <img src="./images/ps5.png" alt="Playstation 5">
                     </div>
                 </div>
 
@@ -754,7 +755,7 @@
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
                         <a href="https://github.com/aahurtado/my_website" target="_blank">
-                            <img src="./images/my_website_github.png" alt="Picture of this website" />
+                            <img src="./images/my_website_github.png" alt="Picture of this website">
                         </a>
                     </div>
                 </div>
@@ -797,6 +798,7 @@
 
     </main>
 
+    <script src="./script.js"></script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
