Added more info to Centene section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
     <meta property="og:url" content="https://www.aaronhurtado.com/">
 
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)">
 
     <title>Aaron Hurtado's Website</title>
 
@@ -247,6 +247,13 @@
                     Health care plans seek accreditation and measure performance through the administration and submission of HEDIS data. Health care plans must undergo a HEDIS Compliance Audit, which may only be performed by licensed organizations and certified auditors. NCQA publishes the results of the measures on their website. HEDIS was designed to allow consumers to compare health care plan performance and for national and regional benchmarks.
                 </p>
 
+                <div class="image-container">
+                    <figure>
+                        <img src="./images/hedis_measures.PNG" alt="HEDIS Measure Descriptions" onclick="openFullscreen(this)" class="clickable-image">
+                        <figcaption>Brief HEDIS measure descriptions</figcaption>
+                    </figure>
+                </div>
+
                 <h5>Example HEDIS Measures</h5>
                 <ul>
                     <li>Lead Screening in Children (LSC): The percentage of children 2 years of age who had one or more capillary or venous lead blood test for lead poisoning by their second birthday.</li>
@@ -262,6 +269,10 @@
                 <h5>What I did:</h5>
                 <p>
                     On an annual basis NCQA adds, deletes, and revises the HEDIS measures. As a member of the backend healthcare analytics engine team, I was responsible for updating the codebase (C++) to implement new and revised measures. Afterwards, our Quality Assurance (QA) team would review the changes and ensure that the measures were implemented correctly. If any bugs or issues were found, I would work with the QA team to fix them.
+                </p>
+
+                <p>
+                    Every year NCQA published a large Technical Specifications document that contained all of the HEDIS measures and their specifications. This document was used as a reference for implementing the measures in our codebase. My task would be to read through the document and write code (C++) to implement the measures according to their specifications. Above is an image showing a simplified example of what the Technical Specifications document looked like.
                 </p>
 
                 <p>
