Added linke to NCQA report card website

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </p>
 
                 <p>
-                    Health care plans seek accreditation and measure performance through the administration and submission of HEDIS data. Health care plans must undergo a HEDIS Compliance Audit, which may only be performed by licensed organizations and certified auditors. NCQA publishes the results of the measures on their website. HEDIS was designed to allow consumers to compare health care plan performance and for national and regional benchmarks.
+                    Health care plans seek accreditation and measure performance through the administration and submission of HEDIS data. Health care plans must undergo a HEDIS Compliance Audit, which may only be performed by licensed organizations and certified auditors. NCQA publishes the results of the measures on their website. HEDIS was designed to allow consumers to compare health care plan performance and for national and regional benchmarks. You can actually look up the rating of your healthcare plan on their website <a href="https://reportcards.ncqa.org/health-plans" target="_blank" rel="noopener noreferrer">here</a>. You can filter by state, search by name, and sort by rating. 
                 </p>
 
                 <div class="image-container">
